--- a/lista-de-pessoas/Index.html
+++ b/lista-de-pessoas/Index.html
@@ -15,11 +15,13 @@
         </header>
         <form id="form-pessoas">
             <p>Adicione uma pessoa: </p>
+
             <div class="form-control">
                 <input type="text" id="nome" placeholder="digite o nome">
                 <input type="text" id="idade" placeholder="digite sua idade">
                 <input type="text" id="cpf" placeholder="digite o cpf">
-                <button type="submit">+</button>
+
+                <button type="submit" id="add">+</button>
             </div>
         </form>
         <div id="toolbar">
@@ -31,12 +33,16 @@
                 </form>
             </div>
         </div>
-        <div class="lista">
-            <h3>guilherme - 21 - 159452612</h3> 
+        <div class="lista-content">
+            <h3>guilherme</h3> 
+            <h3>21</h3>
+            <h3>18426345</h3>
             <button class="excluir">x</button>
         </div>
-        <div class="lista">
-            <h3>pedro - 19 - 451218515</h3> 
+        <div class="lista-content">
+            <h3>pedro</h3> 
+            <h3>19</h3>
+            <h3>4512</h3>
             <button class="excluir">x</button>
         </div>
     </div> <!--menu-->
